<resources>
    <string name="app_name">GUI Demo (16L-4032)</string>
    <string name="main_signup">Signup</string>
    <string name="main_first_name">First Name</string>
    <string name="main_last_name">Last Name</string>
    <string name="main_email">Email</string>
    <string name="main_password">Password</string>
    <string name="main_retype_password">Retype Password</string>
    <string name="main_female">female</string>
    <string name="main_male">Male</string>
    <string name="main_logo_of_application">logo of Application</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Relative Layout</string>
    <string name="tab_text_2">Constraint Layout</string>
    <string name="tab_text_3">Frame Layout</string>
    <string name="tab_text_4">Linear Layout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="relative_elon_musk">Elon Musk</string>
    <string name="relative_posts">posts</string>
    <string name="relative_28_7_m">28.7 M</string>
    <string name="relative_followers">followers</string>
    <string name="relative_75">75</string>
    <string name="relative_description">Tesla, SpaceX, tunnels(Yes tunnels) and Open AI</string>
    <string name="relative_name">Elon Musk</string>
    <string name="relative_site">Tesla.com</string>
    <string name="main_exit">Exit</string>
    <string name="constraint_4">4+</string>
    <string name="constraint_age">Age</string>
    <string name="constraint_8_ratings">8 ratings</string>
    <string name="constraint_7_99">$7.99</string>
    <string name="constraint_improved_user_interface_for_iphone_x">- Improved user interface for iPhone X</string>
    <string name="constraint_4_9">4.9</string>
    <string name="constraint_version_2_7">Version 2.7</string>
    <string name="constraint_preview">Preview</string>
    <string name="constraint_update">Update</string>
    <string name="constraint_blink_better_affiliate_links">Blink: Better Affiliate links</string>
    <string name="constraint_squibner_llc">Squibner LLC</string>
    <string name="constraint_productivity">Productivity</string>
    <string name="constraint_affiliate_linking_pack">Affiliate linking pack</string>
    <string name="constraint_also_included_in">Also included in</string>
    <string name="constraint_what_s_new">What\'s new</string>
    <string name="constraint_version_history">Version History</string>
    <string name="constraint_3mo_ago">3mo ago</string>
    <string name="constraint_improved_apple_music_linking_support">- Improved Apple music linking support</string>
    <string name="constraint_better_support_for_converting_short_urls">- Better support for converting short URLs</string>
    <string name="constraint_more">more</string>
    <string name="constraint_todo">TODO</string>
    <string name="frame_blink">Blink</string>
    <string name="frame_todo">TODO</string>
    <string name="frame_blink_better_affiliate_links">Blink: Better Affiliate links</string>
    <string name="frame_preview">Preview</string>
    <string name="linear_name">Haad Fida</string>
    <string name="linear_photos">Photos</string>
    <string name="linear_125">125</string>
    <string name="linear_gmail_com">Haad@gmail.com</string>
    <string name="linear_followers">Followers</string>
    <string name="linear_1205">1205</string>
    <string name="linear_following">Following</string>
    <string name="linear_360">360</string>
    <string name="linear_show_all_comments">Show all comments</string>
    <string name="linear_todo">TODO</string>
    <string name="linear_add_to_group">Add to group</string>
    <string name="linear_266_225_225">+266 225 225</string>
    <string name="relative_3341">3341</string>
    <string name="relative_following">following</string>
    <string name="relative_todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="constraint_multitext_headline_hint">Multitext headline</string>
    <string name="relative_multitext_description_hint">Multitext description</string>


</resources>
