<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_alignParentTop="true"

        android:layout_marginTop="400dp"
        android:layout_marginBottom="50dp"
        android:padding="4dp"
        app:alignmentMode="alignBounds"
        app:columnCount="3"
        app:rowOrderPreserved="false"
        app:useDefaultMargins="true">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"

            />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk2"
            app:layout_column="1"
            app:layout_columnWeight="1"

            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"

            />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk4"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"

            />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk5"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"

            />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:gravity="center"

            android:src="@mipmap/musk6"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"

            />

    </androidx.gridlayout.widget.GridLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView19"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignBottom="@+id/nav_view"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="503dp"
        android:src="@mipmap/muskpfp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"


        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="350dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/simpleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/relative_elon_musk"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_bold"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignTop="@+id/simpleTextView"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#C4C4C4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:layout_marginLeft="360dp"
        android:src="@mipmap/settings" />

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="160dp"
    android:textColor="#000000"
    android:text="3341"
    android:textSize="20sp"
    android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="170dp"
        android:text="@string/relative_posts"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="240dp"
        android:textColor="#000000"
        android:text="@string/relative_28_7_m"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="240dp"
        android:text="@string/relative_followers"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="340dp"
        android:textColor="#000000"
        android:text="@string/relative_75"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="325dp"
        android:text="following"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/testView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/relative_description"
        android:ems="10"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:textColor="#000000"
        android:gravity="start|top"
        android:textSize="20sp"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/relative_name"
        android:layout_marginTop="190dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/relative_site"
        android:layout_marginTop="300dp"
        android:textColor="#0087FF"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_bold"/>




</RelativeLayout>